--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,10 @@
 
 	* Updated test-clsql.cl to use automated testing with a config
 	file
+
+	* Changed return types of field accessors from cstring to (* :unsigned-char).
+	This prepares for being able to use specified type conversions when taking
+	field data into lisp.
 	
 23 Mar 2002 Kevin Rosenberg (kevin@rosenberg.net)
 	
