--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+25 Mar 2002 Kevin Rosenberg (kevin@rosenberg.net)
+
+	* interfaces/mysql/mysql-api.cl
+	Added mysql-fetch-fields, mysql-fetch-field-direct
+	Got :auto types working
+
+	* interfaces/postgresql/postgresql-api.cl
+	Added pgsql-field-types enum
+	Got :auto types working
+
+;	* multiple-files
+;	Renamed :field-types to :types
+	
 24 Mar 2002 Kevin Rosenberg (kevin@rosenberg.net)
 
 	* Added field-types parameter to query, database-query,
