--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 26 Mar 2002 Kevin Rosenberg (kevin@rosenberg.net)
 	* interfaces/postgresql-socket/postgresql-socket-api.cl
 	Implemented direct socket reading for field type :double
+
+	* Added usage information for :types to documentation
 	
 25 Mar 2002 Kevin Rosenberg (kevin@rosenberg.net)
 
