--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
 	* sql/usql.cl:
 	Moved functionality from low-level interfaces to this file
 	via generic functions
+	* test-suite/tester.cl:
+	Added test with acl-compat-tester, moved others to old-tests
+	directory.
 	
 06 Apr 2002 Kevin Rosenberg (kevin@rosenberg.net)
 	* src/usql.cl:
