--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 23 Apr 2002 Kevin Rosenberg (kevin@rosenberg.net)
+	* Multiple files:
+	Added initial support for connection pool
+
+23 Apr 2002 Kevin Rosenberg (kevin@rosenberg.net)
 	* interfaces/postgresql/postgresql-sql.cl:
 	Fix keyword typo in database-read-large-object
 	* interfaces/mysql/mysql-loader.cl
