r1801: Added transaction code

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
 27 Apr 2002 Kevin Rosenberg (kevin@rosenberg.net)
 	* Multiple files:
 	Added initial support for connection pool
-	Added transactions for MySQL
+	* sql/transactions.cl
+	Took transaction code from UncommonSQL and integrated
+	into CLSQL code. See file for disclaimer about why this
+	was added.
 
 23 Apr 2002 Kevin Rosenberg (kevin@rosenberg.net)
 	* interfaces/postgresql/postgresql-sql.cl:
