--- a/debian/changelog
+++ b/debian/changelog
@@ -2,5 +2,5 @@ cl-sql (0.7.1-1) unstable; urgency=low
 
   * Initial Release (closes: 146792).
 
- -- Kevin Rosenberg <kevin@rosenberg.net>  Thu, 25 Apr 2002 19:13:41 -0600
+ -- Kevin M. Rosenberg <kevin@rosenberg.net>  Thu, 25 Apr 2002 19:13:41 -0600
 
