--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+05 Jul 2002 Kevin Rosenberg (kevin@rosenberg.net)
+	* Change case of logical host
+	
 14 May 2002 Kevin Rosenberg (kevin@rosenberg.net)
 	* clsql-base.system: Added base package that can be used without
 	high-level SQL commands. Used for adding support for UncommonSQL.
