--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (0.7.2-1) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Kevin M. Rosenberg <kevin@rosenberg.net>  Fri,  5 Jul 2002 11:06:21 -0600
+
 cl-sql (0.7.1-2) unstable; urgency=low
 
   * Additions to the copyright file
