--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (0.7.3-1) unstable; urgency=low
+
+  * Added missing documentation to upstream package.
+
+ -- Kevin M. Rosenberg <kevin@rosenberg.net>  Mon,  8 Jul 2002 07:10:42 -0600
+
 cl-sql (0.7.2-1) unstable; urgency=low
 
   * New upstream version.
