--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+25 Jul 2002 Kevin Rosenberg (kevin@rosenberg.net)
+	* Also change case of logical host in loader files
+	* Remove ;bin; component for .system files if using
+	Common Lisp Controller.
+	
 05 Jul 2002 Kevin Rosenberg (kevin@rosenberg.net)
 	* Change case of logical host
 	
