--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+cl-sql (0.7.7-1) unstable; urgency=low
+
+  * New upstream, rework logical pathnames for improved Common Lisp
+    Controller compatibility.
+
+ -- Kevin M. Rosenberg <kevin@rosenberg.net>  Wed, 31 Jul 2002 19:34:52 -0600
+
+cl-sql (0.7.6-2) unstable; urgency=low
+
+  * Rework logical pathnames for improved Common Lisp Controller compatibility.
+
+ -- Kevin M. Rosenberg <kevin@rosenberg.net>  Wed, 31 Jul 2002 19:31:40 -0600
+
 cl-sql (0.7.6-1) unstable; urgency=low
 
   * New upstream version, improves Common Lisp Controller compatibility.
