--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (0.8.5-1) unstable; urgency=low
+
+  * New upstream version
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sun,  1 Sep 2002 03:00:37 -0600
+
 cl-sql (0.8.4-1) unstable; urgency=low
 
   * New upstream version for non-CLC systems
