--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (0.8.6-1) unstable; urgency=low
+
+  * New upstream version, fixes problem with .asd files
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri,  6 Sep 2002 04:26:06 -0600
+
 cl-sql (0.8.5-1) unstable; urgency=low
 
   * New upstream version
