--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (0.9.0-1) unstable; urgency=low
+
+  * Move entirely to .asd files. Remove pathnames from .asd files.
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 18 Sep 2002 01:18:12 -0600
+
 cl-sql (0.8.6-1) unstable; urgency=low
 
   * New upstream version, fixes problem with .asd files
