--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (0.9.2-1) unstable; urgency=low
+
+  * Add information fields to .asd files
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 19 Sep 2002 19:40:43 -0600
+
 cl-sql (0.9.1-1) unstable; urgency=low
 
   * New upstream fixing typo in clsql.asdf
