--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (0.9.3-2) unstable; urgency=low
+
+  * Add call to common-lisp-source-compatible
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sun, 22 Sep 2002 21:01:20 -0600
+
 cl-sql (0.9.3-1) unstable; urgency=low
 
   * push onto cl:*features* if loaded with 'asdf:load-compiled-op
