--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
+cl-sql (0.9.4-1) unstable; urgency=low
+
+  * Add reader conditionals to .asd file
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 25 Sep 2002 06:37:30 -0600
+
 cl-sql (0.9.3-2) unstable; urgency=low
 
-  * Add call to common-lisp-only-compatible
+  * Add call to clc-only-compatible
 
  -- Kevin M. Rosenberg <kmr@debian.org>  Sun, 22 Sep 2002 21:01:20 -0600
 
