--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 cl-sql (0.9.5-1) unstable; urgency=low
 
   * Fix defgeneric form in db-interfaces.cl
+  * Fix load-libraris call in postgresql-socket-api.cl
 
  -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 27 Sep 2002 08:55:33 -0600
 
