--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (0.9.8-1) unstable; urgency=low
+
+  * Rename .cl files to .lisp files
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 30 Sep 2002 04:08:25 -0600
+
 cl-sql (0.9.7-1) unstable; urgency=low
 
   * base/conditions.cl: Fix format string error
