--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+16 Oct 2002 Kevin Rosenberg (kevin@rosenberg.net)
+        * Add support for SBCL, OpenMCL, and SCL
+	* Add *load-truename* to search path for clsql's
+	compiled libraries.
+
 01 Sep 2002 Kevin Rosenberg (kevin@rosenberg.net)
         * Rework use of file types in .asd files
 
