--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,8 @@ cl-sql (1.1.0-1) unstable; urgency=low
 
   * Add SCL support.
   * Fix file type in test-suite/tester-clsql.lisp
-
+  * Add *load-truename* searching for clsql's compiled libraries
+  
  -- Kevin M. Rosenberg <kmr@debian.org>  Tue, 15 Oct 2002 13:34:41 -0600
 
 cl-sql (1.0.1-1) unstable; urgency=low
