--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cl-sql (1.1.1-1) unstable; urgency=low
+
+  * Add more tests can existence of helper libraries. Will signal error rather than warn
+  if libraries not found.
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 17 Oct 2002 16:12:01 -0600
+
 cl-sql (1.1.0-1) unstable; urgency=low
 
   * Add SCL support.
