--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.1.2-1) unstable; urgency=low
+
+  * Fix clsql-mysql.so search path for Debian.
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 17 Oct 2002 19:16:52 -0600
+
 cl-sql (1.1.1-1) unstable; urgency=low
 
   * Add more tests can existence of helper libraries. Will signal error rather than warn
