--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+cl-sql (1.1.3-1) unstable; urgency=low
+
+  * Add more support for SCL and performance improvements to postgresql-socket
+  (Thanks Doug Crosher)
+  * Add locks to connection pool for SCL (Doug Crosher)
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 21 Oct 2002 01:26:40 -0600
+
 cl-sql (1.1.2-1) unstable; urgency=low
 
   * Fix clsql-mysql.so search path for Debian.
