--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.2.0-3) unstable; urgency=low
+
+  * Move cl-sql-base package architecture from any to all.
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 28 Oct 2002 16:07:25 -0700
+
 cl-sql (1.2.0-2) unstable; urgency=low
 
   * Split rules file into build-arch and build-indep (closes: 166800)
