--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.2.2-1) unstable; urgency=low
+
+  * Remove 'load-compiled-op from .asd file
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri,  8 Nov 2002 09:49:09 -0700
+
 cl-sql (1.2.1-1) unstable; urgency=low
 
   * New upstream version
