--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.3.0-1) unstable; urgency=low
+
+  * uffi/clsql-uffi.lisp: return NIL for numeric fields that are NULL
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 13 Dec 2002 05:30:08 -0700
+
 cl-sql (1.2.4-1) unstable; urgency=low
 
   * Remove changes information from copyright file
