r4733: *** empty log message ***

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+cl-sql (1.5.0-1) unstable; urgency=low
+
+  * Update SBCL support in cmucl-compat package.
+  * Use debian/compat rather than DH_COMPAT
+  * Add cl-sql-tests binary with test suite
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu,  1 May 2003 16:23:37 -0600
+
 cl-sql (1.4.6-1) unstable; urgency=low
 
   * Documentation fix
